feat: convert Player to singleton